test/TestPhases/exportinference/invalid/enum.blc
module exposes T, Color

typealias T = int32

enum Color : T
    Red = 1
    Blue = 2 default
extension // Thats bad because internal structure and methods are either hidden or exposed together 
    function Init () returns Color
        return Color.Red
    end
end

// const RED: Color = Color.Red
